# pyrct2-agent

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
scripts/: lint.sh
src/pyrct2_agent/: __init__.py  agent.py  bot.py  modes.py  prompts.py  renderers.py  result.py
src/pyrct2_agent/tools/: __init__.py  observe.py  paths.py  rides.py  staff.py
src/pyrct2_agent/tools/memory/: __init__.py  _scratchpad.py
tests/: conftest.py  test_truncation.py
tests/modes/: test_pause_and_act.py  test_real_time.py  test_tick_per_action.py
