[project]
name = "pyrct2-agent"
version = "0.1.0"
description = "LLM agent that plays RollerCoaster Tycoon 2 via pyrct2"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pyrct2>=0.9.0",
    "langgraph>=1.1.0",
    "langchain-openai>=1.1.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
