[project]
name = "pyrct2-agent"
version = "0.1.0"
description = "LLM agent that plays RollerCoaster Tycoon 2 via pyrct2"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pyrct2>=0.9.3",
    "langgraph>=1.1.6",
    "langchain>=1.0",
    "langchain-openai>=1.1.12",
    "python-dotenv>=1.0",
]

[tool.uv.sources]
pyrct2 = { path = "../pyrct2", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
