[project]
name = "pyrct2-agent"
version = "0.1.0"
description = "LLM agent that plays RollerCoaster Tycoon 2 via pyrct2"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pyrct2>=0.9.6",
    "langgraph>=1.1.6",
    "langchain>=1.0",
    "langchain-openai>=1.1.12",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0",
    "pytest-xdist>=3.8",
]

[tool.uv.sources]
pyrct2 = { path = "../pyrct2", editable = true }

[tool.pytest.ini_options]
addopts = "-n 3 -v"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
